2006-03-20  David Reveman  <davidr@novell.com>

	* src/window.c (freeWindow): Destroy frame window.
	(mapWindow): Fix so the sync requests are sent correctly when a window
	is mapped but disable it for now as it seems to be causing problems
	with some applications.
	(recalcWindowActions): Allow dialog window actions on util and
	toolbar windows.

	* src/event.c (handleEvent): Remove event mask and button grabs
	when window is reparented.
	(handleEvent): Update client list when window type changes.
	(handleEvent): Use constrainNewWindowSize on move/resize client
	messages and configure requests.

	* gnome/window-decorator/gnome-window-decorator.c (window_closed):
	Delete decor property when window is closed.

2006-03-17  Jeremy C. Reed  <reed@reedmedia.net>

	reviewed by: David Reveman

	* autogen.sh:
	Be consistent with rest of modular xorg by using same
	autogen.sh.  This allows it to be run using a different
	work directory.

2006-03-17  Jeremy C. Reed  <reed@reedmedia.net>

	reviewed by: David Reveman

	* INSTALL:
	Mention startup-notification requirement.

2006-03-17  David Reveman  <davidr@novell.com>

	* plugins/scale.c: Add opacity option.

	* configure.ac: Bump version to 0.0.7.

2006-03-17  Radek Doulik  <rodo@novell.com>

	* src/session.c: added all mandatory SM client callbacks, handle
	ICE connection and process ICE messages

	* src/display.c (compAddWatchFd): new function, adds new fd watch
	- for poll io multiplexing
	(compRemoveWatchFd): new function, remove fd watch added by
	compAddWatchFd
	(doPoll): new helper function, does call poll and calls callbacks
	for watch fd's. returns the value of poll call
	(eventLoop): use doPoll, we use NULL for display fd watch so that
	it doesn't call anything and just use return value from poll as
	before

2006-03-17  David Reveman  <davidr@novell.com>

	* plugins/switcher.c (switchDamageWindowRect): Update window
	attributes for popup window. We never get a MapRequest for this
	window so it most be done here.